Fixing forget password text alignment

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5570,6 +5570,16 @@ button.close {
 .th__back-button {
   margin-top: 20px;
   font-size: 1.6rem; }
+.th__title {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 10px;
+  text-align: center;
+  font-size: 2.4rem;
+  margin-bottom: 20px; }
+.th__subtitle {
+  margin-bottom: 20px;
+  text-align: center; }
 
 .align-right {
   text-align: right; }
